# VibeVoice

./: .gitignore  README.md  README_ORIGINAL.md  inference.py  inference.sh  pyproject.toml  q4.sh  q8.sh  quantize_vibevoice.py  start.sh
demo/: vibevoice_asr_gradio_demo.py  vibevoice_asr_inference_from_file.py
finetuning-asr/: README.md  batch_inference.sh  batch_inference_lora.py  inference.sh  inference_lora.py  lora_finetune.py  optuna_search_space.example.json  prepare_outputpus_dataset.py  prepare_outputpus_dataset.sh  split_long_dataset_files.py  test.sh  test_lora.py  train.sh  utils.py
vibevoice/: generation_mixin.py  utils.py
vibevoice/processor/: vibevoice_asr_processor.py
